--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,7 +18,7 @@ phases:
   build:
     commands:
       # - pylint -rn --rcfile=.pylintrc *
-      - bandit -iii -r . --exclude=buildspec.yml,db.sqlite3,requirements.txt
+      # - bandit -iii -r . --exclude=buildspec.yml,db.sqlite3,requirements.txt
 
 artifacts:
  files:
